# bdk-sqlx

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
db/migrations/: 00_bdk_wallet.sql
examples/: bdk_sqlx_postgres.rs
examples/bdk_sqlx_postgres/: Cargo.toml
examples/bdk_sqlx_postgres/src/: main.rs
migrations/postgres/: 01_bdk_wallet.sql
migrations/sqlite/: 01_bdk_wallet.sql
src/: lib.rs  main.rs  postgres.rs  sqlite.rs  test.rs  tests.rs
