[package]
name = "bdk_sqlx"
version = "0.1.0"
edition = "2021"

[dependencies]
bdk_wallet = { version = "1.0.0-beta.5" }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sqlx = { version = "0.8.1", default-features = false, features = ["runtime-tokio", "tls-rustls-ring","derive", "postgres", "sqlite", "json", "chrono", "uuid", "sqlx-macros", "migrate"] }
thiserror = "1"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde_json", "json"] }

[dev-dependencies]
assert_matches = "1.5.0"
bdk_electrum = { version = "0.19.0"}
bdk_testenv = { version = "0.10.0" }
better-panic = "0.3.0"
