[package]
name = "bdk_sqlx_postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bdk_electrum = { version = "0.19.0"}
bdk_sqlx = { path = "../.." }
bdk_wallet = "1.0.0-beta.5"
better-panic = "0.3.0"
rustls = "0.23.12"
tokio = "1.40.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde_json", "json"] }
